8161536 Fix [ClassNotFoundException: allow] error on java 11