@@ -37,7 +37,7 @@
  * @run main/othervm -Djdk.tls.namedGroups="secp256r1,sect193r1"
  *      ClientJSSEServerJSSE
  * @run main/othervm -Djdk.tls.namedGroups="secp256r1,sect193r1"
- *      -Djava.security.manager=allow ClientJSSEServerJSSE sm policy
+ *      ClientJSSEServerJSSE sm policy
  */
 
 import java.security.Provider;
